--- a/style.css
+++ b/style.css
@@ -1,18 +1,39 @@
+.main-container {
+    margin: 0 auto;
+    width: 768px;  
+}
+
 h1 {
     font-size: 50px;
-    font-family: Georgia;
-    margin-bottom: 30px;
-    color: rgb(95, 21, 44);
- }
- #div1 {
-     color: red;
- }
- .class1 {
-     color:blue
- }
- a[target] {
-     color:crimson
- }
- h1:hover {
-     color:darkgreen
- }
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
+    margin-bottom: 30px;  
+}
+
+h2 {
+    font-size: 34px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #414141;
+    color: #ffffff;
+    margin-bottom: 15px;
+}
+
+p, ul {
+    font-size: 24px;
+    line-height: 28px;
+    padding-bottom: 5px;
+}
+
+p::first-letter {
+    font-size: 34px;
+    color: #ffffff;
+    background-color: #434343;
+}
+
+img {
+    min-width: 300px;
+    max-width: 100%;
+    height: auto;
+    padding: 20px;
+    border: 5px solid #414141;
+}
